<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:background="@color/colorPrimaryDark"
    android:layout_height="match_parent"
    tools:context=".ui.SearchActivity">

    <Button
        android:layout_width="100dp"
        android:text="@string/log_out"
        android:textColor="@android:color/white"
        android:id="@+id/logout_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/buttonbg"
        android:layout_height="40dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        app:layout_constraintTop_toBottomOf="@id/logout_button"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/search_tracks_label"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:text="@string/search_tracks"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/search_tracks_label"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/search_tracks_intro"
        android:textColor="@android:color/white"
        android:text="@string/search_tracks_from_all_of_spotify"
        />

    <Button
        android:layout_width="200dp"
        android:text="@string/search_tracks"
        android:textColor="@android:color/white"
        android:id="@+id/search_button"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_tracks_intro"
        android:background="@drawable/buttonbg"
        android:layout_height="40dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        app:layout_constraintTop_toBottomOf="@id/search_button"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/search_20s_tracks_label"
        android:layout_marginTop="30dp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:text="@string/search_20_s_song"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/search_20s_tracks_label"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/search_20s_tracks_intro"
        android:textColor="@android:color/white"
        android:text="@string/search_songs_from_this_century"
        />

    <Button
        android:layout_width="200dp"
        android:text="@string/search_20s_tracks"
        android:textColor="@android:color/white"
        android:id="@+id/search_20s_button"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_20s_tracks_intro"
        android:background="@drawable/buttonbg"
        android:layout_height="40dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>