<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:textSize="40sp"
            android:id="@+id/welcome_text"
            android:text="@string/welcome"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:textSize="20sp"
            android:id="@+id/intro_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcome_text"
            android:text="@string/you_need_to_login_to_use_spotify_services"
            android:textColor="@android:color/white"
            android:layout_height="wrap_content"/>

        <RelativeLayout
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@id/intro_text"
            android:layout_marginTop="30dp"
            android:animateLayoutChanges="true"
            android:background="@drawable/buttonbg"
            android:layout_height="50dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_centerInParent="true"
                android:text="@string/log_in"
                android:id="@+id/login_text"
                android:gravity="center"
                android:textSize="20sp"
                android:visibility="visible"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:layout_height="match_parent"/>

            <ProgressBar
                android:layout_width="100dp"
                android:layout_centerInParent="true"
                android:visibility="gone"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:id="@+id/progress_main"
                android:indeterminate="true"
                android:indeterminateTint="@android:color/white"
                android:layout_height="25dp"/>

        </RelativeLayout>


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>